--- a/index.css
+++ b/index.css
@@ -113,6 +113,21 @@ code {
   margin: 10px 0;
   border-left: 5px solid #007bff;
 }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 15px;
+}
+th,
+td {
+  border: 2px solid black;
+  padding: 10px;
+  text-align: left;
+}
+th {
+  background-color: #2980b9;
+  color: white;
+}
 .answer {
   background: #e9ecef;
   padding: 10px;
@@ -129,7 +144,6 @@ code {
   }
 }
 
-
 @media (max-width: 992px) {
   #TOC {
     width: 30%;
@@ -140,7 +154,6 @@ code {
     margin-left: 0;
   }
 }
-
 
 @media (max-width: 768px) {
   #TOC {
@@ -157,7 +170,6 @@ code {
   }
 }
 
-
 @media (max-width: 576px) {
   body {
     font-size: 16px;
@@ -173,8 +185,10 @@ code {
     max-width: 100%;
   }
 }
-table,tr,td,th{
-	border:2px solid black;
-	border-collapse:collapse;
-	
+table,
+tr,
+td,
+th {
+  border: 2px solid black;
+  border-collapse: collapse;
 }
